# safe-job-application-copilot

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: job.json  profile.json
src/safe_job_copilot/: __init__.py  analyzer.py  cli.py  llm.py
tests/: test_analyzer.py
