[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-job-application-copilot"
version = "0.1.0"
description = "Human-approved job application copilot for fit scoring, CV tailoring, cover letters, and browser-fill plans."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kartik Mishra" }]
license = { text = "MIT" }
keywords = ["job-automation", "resume", "cover-letter", "human-in-the-loop", "ai-agent", "python"]

[project.scripts]
safe-job-copilot = "safe_job_copilot.cli:main"

